k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quiz-dev
  labels:
    environment: development
    app: quiz-o-meter
